<resources>
    <string name="app_name">Hello World</string>
    <string name="head">Подписка</string>
    <string name="userName">Имя пользователя</string>
    <string name="userEmail">email</string>
    <string name="okButton">Ок</string>
    <string name="clearButton">Очистить</string>
    <string name="txtSubscriptionDone">Подписка на рассылку успешно оформлена для пользователя</string>
    <string name="txtOnEmail">на электронный адрес</string>

</resources>
